--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "n8n-nodes-infomaniak",
+  "name": "n8n-nodes-infomaniak-api",
   "version": "0.1.0",
   "description": "n8n community node for the Infomaniak API",
   "license": "MIT",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-org/n8n-nodes-infomaniak.git"
+    "url": "https://github.com/Sitrifix/n8n-nodes-infomaniak-api.git"
   },
   "scripts": {
     "generate:nodes": "node scripts/generate-nodes.js",
