--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
 		"skipLibCheck": true,
 		"outDir": "./dist/"
 	},
-	"include": ["credentials/**/*", "nodes/**/*", "nodes/**/*.json", "package.json", "tests/**/*"]
+	"include": ["credentials/**/*", "nodes/**/*", "nodes/**/*.json", "package.json", "tests/**/*", "index.ts"]
 }
