--- a/package.json
+++ b/package.json
@@ -3,10 +3,22 @@
   "version": "0.1.6",
   "description": "n8n community node for the Infomaniak API",
   "license": "MIT",
-  "homepage": "",
+  "homepage": "https://github.com/Sitrifix/n8n-nodes-infomaniak-api#readme",
+  "bugs": {
+    "url": "https://github.com/Sitrifix/n8n-nodes-infomaniak-api/issues"
+  },
   "keywords": [
     "n8n-community-node-package",
-    "infomaniak"
+    "n8n",
+    "n8n-nodes",
+    "community-node",
+    "workflow-automation",
+    "infomaniak",
+    "api",
+    "kdrive",
+    "kchat",
+    "mail",
+    "public-cloud"
   ],
   "author": {
     "name": "Sitrifix"
@@ -32,7 +44,9 @@
     "access": "public"
   },
   "files": [
-    "dist"
+    "dist",
+    "README.md",
+    "LICENSE"
   ],
   "n8n": {
     "n8nNodesApiVersion": 1,
